--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ wp-content/cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
+
+# SASS Config
+config.rb
+.sass-cache
+
+.idea/
