--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "last 2 versions",
     "Firefox ESR"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "npm": "^5.7.1"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
