🐛 FIX: Pipeline Settings

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,14 @@ trigger:
 - dev
 variables:
 - name: versionStamp
-  value: '[Build: $(Build.BuildNumber). Commit: $(Build.SourceVersion)]'
+  value: '[Build: $(Build.BuildNumber)]'
 pool:
   vmImage: "ubuntu-20.04"
 steps:
+- task: NodeTool@0
+  displayName: 'Use Node 14'
+  inputs:
+    versionSpec: 14.x
 - task: Npm@1
   inputs:
     command: 'install'
